--- a/OTONO2016/1/Semantica1/bib.bib
+++ b/OTONO2016/1/Semantica1/bib.bib
@@ -1,3 +1,40 @@
+@article{castagna1997337,
+title = "Unifying overloading and λ-abstraction: λ{}",
+journal = "Theoretical Computer Science",
+volume = "176",
+number = "1",
+pages = "337 - 345",
+year = "1997",
+note = "",
+issn = "0304-3975",
+doi = "http://dx.doi.org/10.1016/S0304-3975(97)81497-1",
+url = "http://www.sciencedirect.com/science/article/pii/S0304397597814971",
+author = "Giuseppe Castagna",
+abstract = "In this short note, we present a minimal system to deal with overloaded functions with late binding, in which λ-abstractions are seen as a special case of overloaded functions with just one code. We prove some relevant properties that this system enjoys, and show its connection with the λ&-calculus. We end by showing the practical interest of this system, in particular in modeling object-oriented languages."
+}
+
+
+
+
+
+
+@article{CASTAGNA1995115,
+title = "A Calculus for Overloaded Functions with Subtyping",
+journal = "Information and Computation",
+volume = "117",
+number = "1",
+pages = "115 - 135",
+year = "1995",
+note = "",
+issn = "0890-5401",
+doi = "http://dx.doi.org/10.1006/inco.1995.1033",
+url = "http://www.sciencedirect.com/science/article/pii/S0890540185710334",
+author = "G. Castagna and G. Ghelli and G. Longo",
+abstract = "We present a simple extension of typed λ-calculus where functions can be overloaded by putting different "branches of code" together. When the function is applied, the branch to execute is chosen according to a particular selection rule which depends on the type of the argument. The crucial feature of the present approach is that the branch selection depends on the "run-time type" of the argument, which may differ from its compile-time type, because of the existence of a subtyping relation among types. Hence overloading cannot be eliminated by a static analysis of code, but it is an essential feature to be dealt with during computation. We obtain in this way a type-dependent calculus, which differs from the various λ-calculi where types to not play any role during computation. We prove confluence and a generalized subject-reduction theorem for this calculus. We prove strong normalization for a "stratified" subcalculus. The definition of this calculus is guided by the understanding of object-oriented features and the connections between our calculus and object-orientedness are extensive stressed. We show that this calculus provides a foundation for types object-oriented languages which solves some of the problems of the standard record-based approach."
+}
+
+
+
 @inproceedings{OOSOFHl,
 author = {Mark Shields, Simon Peyton Jones},
 title = {Object-Oriented Style Overloading for Haskell},
