--- a/OTONO2016/1/Survey/bib.bib
+++ b/OTONO2016/1/Survey/bib.bib
@@ -1,3 +1,42 @@
+@article{castagna1997,
+title = "Unifying overloading and λ-abstraction: λ{}",
+journal = "Theoretical Computer Science",
+volume = "176",
+number = "1",
+pages = "337 - 345",
+year = "1997",
+note = "",
+issn = "0304-3975",
+doi = "http://dx.doi.org/10.1016/S0304-3975(97)81497-1",
+url = "http://www.sciencedirect.com/science/article/pii/S0304397597814971",
+author = "Giuseppe Castagna",
+}
+
+
+
+
+
+
+@article{castana1995,
+title = "A Calculus for Overloaded Functions with Subtyping",
+journal = "Information and Computation",
+volume = "117",
+number = "1",
+pages = "115 - 135",
+year = "1995",
+note = "",
+issn = "0890-5401",
+doi = "http://dx.doi.org/10.1006/inco.1995.1033",
+url = "http://www.sciencedirect.com/science/article/pii/S0890540185710334",
+author = "G. Castagna and G. Ghelli and G. Longo",
+
+}
+
+
+
+
+
+
 @inproceedings{Odersky1995,
  author = {Odersky, Martin and Wadler, Philip and Wehr, Martin},
  title = {A Second Look at Overloading},
