bjipcx;bvl;cbm;cb m

--- a/OTONO2016/1/Survey/survey.tex
+++ b/OTONO2016/1/Survey/survey.tex
@@ -507,8 +507,7 @@ Castagna et al.~\cite{castana1995} present a simple extension of typed $\lambda$
 
 System $\lambda$\& use the concept of multi-types like ~\cite{BETTINI2009261, FJM}. Below is defined de syntax of the types, where $A$ denote an atomic type.
 \[T ::= A| T \to T|\{\overline{T \to T}\}\]
-Also is defined the subtyping relation for muti-types and functions type. 	
-Below is presented the syntax of the term. The terms of the  $\lambda$\&-calculus are the same of the lambda calculus plus an operation which concatenates two different branches $ M \bullet M$ and forms an overloaded term. 
+Also is defined the subtyping relation for muti-types and functions type. The terms of the  $\lambda$\&-calculus are the same of the   calculus plus an operation which concatenates two different branches $ M \bullet M$ and forms an overloaded term. 
 \[M ::= x^T| \lambda x^T. M| M \ M| M \bullet M|\]
 
 
