--- a/OTONO2016/1/Survey/bib.bib
+++ b/OTONO2016/1/Survey/bib.bib
@@ -1,3 +1,23 @@
+@inproceedings{Damas1982,
+ author = {Damas, Luis and Milner, Robin},
+ title = {Principal Type-schemes for Functional Programs},
+ booktitle = {Proceedings of the 9th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {POPL '82},
+ year = {1982},
+ isbn = {0-89791-065-6},
+ location = {Albuquerque, New Mexico},
+ pages = {207--212},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/582153.582176},
+ doi = {10.1145/582153.582176},
+ acmid = {582176},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+
+
+
 @article{castagna1997,
 title = "Unifying overloading and λ-abstraction: λ{}",
 journal = "Theoretical Computer Science",
